estilizando com Sass

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-asa
+        <button>◀ Sass</button>
     </header>
 
     <nav>
-
+        <button>Sass ▶</button>
     </nav>
 </body>
 </html>
