--- a/index.html
+++ b/index.html
@@ -1,19 +1,98 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sass</title>
+    <title>Alura SPA</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
-        <button>◀ Sass</button>
+        <ul>
+            <li>
+                <a href="">Serviços</a>
+            </li>
+            <li>
+                <a href="">Curiosidades</a>
+            </li>
+            <li>
+                <a href="">Nosso espaço</a>
+            </li>
+        </ul>
+        <section>
+            <div>
+                <h1>Alura SPA</h1>
+                <h2>Venha viver o seu melhor dia!</h2>
+            </div>
+        </section>
     </header>
 
     <nav>
-        <button>Sass ▶</button>
+
     </nav>
+
+    <main>
+        <section>
+            <h3>O que oferecemos</h3>
+            <h4>Uma ampla diversidade de serviços com alto padrão de qualidade</h4>
+            <div>
+                <div>
+                    <div>
+                        <img src="imagens/beleza.jpeg" alt="">
+                    </div>
+                    <h5>Bem-estar</h5>
+                    <p>Estar bem com nós mesmos faz toda a diferença. Aproveite nossos tratamentos para ter um momento de auto-cuidado e aumentar a sua auto-estima</p>
+                </div>
+                <div>
+                    <div>
+                        <img src="imagens/bem-estar.jpeg" alt="">
+                    </div>
+                    <h5>Renovação</h5>
+                    <p>Você merece relaxar. Confira as nossas opções de massagens que vão fazer você renovar as energias e esquecer do estresse do dia-a-dia</p>
+                </div>
+                <div>
+                    <div>
+                        <img src="imagens/descanso.jpeg" alt="">
+                    </div>
+                    <h5>Massagem</h5>
+                    <p>Se você precisa de um dia especial para cuidar de você, preparamos opções que promovem uma renovação completa. Confira nossos dias especiais, banhos e tratamentos holísticos.</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h2><i class="fas fa-gift"></i> Inscreva-se para ganhar descontos!</h2>
+            </div>
+            <div>
+                <form action="">
+                    <div>
+                        <input type="email">
+                    </div>
+                    <button>enviar!</button>
+                </form>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="imagens/pedra-e-flor.jpeg" alt="">
+            </div>
+            <div>
+                <h3>É sobre bem estar</h3>
+                <h4>Cuide do seu corpo e leve boas memórias consigo.</h4>
+                <p>Carregue com você o bem-estar, onde estiver. Leve o conforto do SPA para a sua casa. Confira nossas opções de sabonetes, sais de banho e velas para presentear você mesmo ou quem você ama.</p>
+            </div>
+        </section>
+    </main>
+    
+    <footer>
+        Estilizado com Sass e com <i class="fas fa-heart"></i>
+    </footer>
+
 </body>
+
 </html>
