--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -22,12 +22,6 @@
                 <a href="">Nosso espaço</a>
             </li>
         </ul>
-        <section>
-            <div>
-                <h1>Alura SPA</h1>
-                <h2>Venha viver o seu melhor dia!</h2>
-            </div>
-        </section>
     </header>
 
     <nav>
@@ -35,6 +29,10 @@
     </nav>
 
     <main>
+        <section>
+                <h1>Alura SPA</h1>
+                <h2>Venha viver o seu melhor dia!</h2>
+        </section>
         <section>
             <h3>O que oferecemos</h3>
             <h4>Uma ampla diversidade de serviços com alto padrão de qualidade</h4>
